# CppProjectTemplate

./: .clang-format  README.md
SubProject/: CMakeLists.txt  CMakePresets.json
SubProject/include/: log.hpp
SubProject/src/: main.cpp
